--- a/src/main/resources/templates/incident/add.html
+++ b/src/main/resources/templates/incident/add.html
@@ -26,7 +26,7 @@
 
     <!-- container class in order to tell BS to treat it as a container and it is usually container -->
     <div class="container">
-        <form action="#" th:action="@{/send}" id="incidencia" class="form-signin" method="post">
+        <form action="#" th:action="@{/send}" id="incidencia" class="form-signin" method="post" th:object="${incident}">
           <h2>Incidence Information</h2>
                 <div class="form-group">
 				<label class="control-label col-sm-2" for="name">Name:</label> 
@@ -36,21 +36,21 @@
 					</div>
 				</div>
 				<div class="form-group">
-				<label class="control-label col-sm-2" for="name">Description:</label> 
+				<label class="control-label col-sm-2" for="description">Description:</label> 
 					<div class="col-sm-10">
 						<input type="text" class="form-control" name="description"
 							required="true" />
 					</div>
 				</div>
 				<div class="form-group">
-				<label class="control-label col-sm-2" for="name">Tags:</label> 
+				<label class="control-label col-sm-2" for="tags">Tags:</label> 
 					<div class="col-sm-10">
 						<input type="text" class="form-control" name="tags"
 							required="true" />
 					</div>
 				</div>
 				<div class="form-group">
-				<label class="control-label col-sm-2" for="name">Location:</label> 
+				<label class="control-label col-sm-2" for="location">Location:</label> 
 					<div class="col-sm-10">
 						<input type="text" class="form-control" name="location"
 							required="true" />
