--- a/src/main/resources/templates/incident/add.html
+++ b/src/main/resources/templates/incident/add.html
@@ -50,11 +50,24 @@
 					</div>
 				</div>
 				<div class="form-group">
-				<label class="control-label col-sm-2" for="location">Location:</label> 
+				<label class="control-label col-sm-2" for="location">Lattitude:</label> 
 					<div class="col-sm-10">
-						<input type="text" class="form-control" name="location"
+						<input type="text" class="form-control" name="lat"
 							required="true" />
 					</div>
+				</div>
+				<div class="form-group">
+				<label class="control-label col-sm-2" for="location">Longitude:</label> 
+					<div class="col-sm-10">
+						<input type="text" class="form-control" name="lng"
+							required="true" />
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="portada">Multimedia:</label>
+						<div class="col-sm-10">
+							<input type="file" class="custom-file-input" name="multimedia" />
+						</div>
 				</div>
                 <button id="Enter" name="Enter" type="submit" value="enter" class="btn btn-block btn-primary btn-lg">Send incidence</button>
         </form>
