--- a/src/main/resources/templates/incident/add.html
+++ b/src/main/resources/templates/incident/add.html
@@ -50,16 +50,16 @@
 					</div>
 				</div>
 				<div class="form-group">
-				<label class="control-label col-sm-2" for="location">Lattitude:</label> 
+				<label class="control-label col-sm-2" for="lat">Lattitude:</label> 
 					<div class="col-sm-10">
 						<input type="text" class="form-control" name="lat"
 							required="true" />
 					</div>
 				</div>
 				<div class="form-group">
-				<label class="control-label col-sm-2" for="location">Longitude:</label> 
+				<label class="control-label col-sm-2" for="lon">Longitude:</label> 
 					<div class="col-sm-10">
-						<input type="text" class="form-control" name="lng"
+						<input type="text" class="form-control" name="lon"
 							required="true" />
 					</div>
 				</div>
