--- a/src/main/resources/templates/incident/add.html
+++ b/src/main/resources/templates/incident/add.html
@@ -64,7 +64,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="control-label col-sm-2" for="portada">Multimedia:</label>
+					<label class="control-label col-sm-2" for="multimedia">Multimedia:</label>
 						<div class="col-sm-10">
 							<input type="file" class="custom-file-input" name="multimedia" />
 						</div>
