--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,6 +28,9 @@
     <div class="container">
         <form action="#" th:action="@{/userForm}" th:object="${userinfo}" id="Datos" class="form-signin" method="post">
           <h2>Login</h2>
+          		<div th:if="${error}" class="text-danger">
+                        <p>Agent not found, check agent name, password and agent kind</p>
+                    </div>
                 <input id="login" name="login" type="text" th:field="*{login}" class="form-control" placeholder="Name" />
                 <input id="password" name="password" type="password" th:field="*{password}" class="form-control" placeholder="Password" />
                 <select id="kind" name="kind" class="form-control" >
