Mapping adapted to Mongo, list incidents in process

--- a/src/main/resources/templates/data.html
+++ b/src/main/resources/templates/data.html
@@ -79,17 +79,11 @@
  </div>
   <a class="btn btn-primary glyphicon glyphicon-cog " href="/passMenu">Change password</a>
   <a class="btn btn-primary glyphicon glyphicon-cog " href="/incidentMenu">Add incidence</a>
+  <a class="btn btn-primary glyphicon glyphicon-cog " href="${'/incident/list/'+name}">Submitted incidents</a>
   </div>
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-
-    <!-- in order to include tether for BS 4 -->
-    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap.min.js"></script>
+   
 </body>
 
 </html>
