Finished branch with lots of changes:
Changed AgentKind for String
Added emergency check for sensors

--- a/src/main/resources/templates/incident/add.html
+++ b/src/main/resources/templates/incident/add.html
@@ -63,11 +63,26 @@
 							required="true" />
 					</div>
 				</div>
+				<!--
 				<div class="form-group">
 					<label class="control-label col-sm-2" for="multimedia">Multimedia:</label>
 						<div class="col-sm-10">
 							<input type="file" class="custom-file-input" name="multimedia" />
 						</div>
+				</div> -->
+				<div class="form-group">
+				<label class="control-label col-sm-2" for="multimedia">Multimedia:</label> 
+					<div class="col-sm-10">
+						<input type="text" class="form-control" name="multimedia"
+							required="true" />
+					</div>
+				</div>
+				<div class="form-group">
+				<label class="control-label col-sm-2" for="properties">Properties:</label> 
+					<div class="col-sm-10">
+						<input type="text" class="form-control" name="properties"
+							required="true" />
+					</div>
 				</div>
                 <button id="Enter" name="Enter" type="submit" value="enter" class="btn btn-block btn-primary btn-lg">Send incidence</button>
         </form>
