--- a/src/main/resources/templates/data.html
+++ b/src/main/resources/templates/data.html
@@ -78,7 +78,7 @@
      </div>
  </div>
   <a class="btn btn-primary glyphicon glyphicon-cog " href="/passMenu">Change password</a>
-  <a class="btn btn-primary glyphicon glyphicon-cog " href="/incidentMenu">Add incidence</a>
+  <a class="btn btn-primary glyphicon glyphicon-cog " href="/incident/add">Add incidence</a>
   </div>
 
 
