Fixed web app problems and save incidents in the database

--- a/src/main/resources/templates/incident/details.html
+++ b/src/main/resources/templates/incident/details.html
@@ -26,6 +26,18 @@
 						<td th:text="${incident.location}"></td>		
 					</tr>
 					<tr>
+						<td>Tags</td>
+						<td th:text="${incident.tags}"></td>		
+					</tr>
+					<tr>
+						<td>Properties</td>
+						<td th:text="${incident.properties}"></td>		
+					</tr>
+					<tr>
+						<td>Multimedia</td>
+						<td th:text="${incident.multimedia}"></td>		
+					</tr>
+					<tr>
 						<td>State</td>
 						<td th:text="${incident.state}"></td>		
 					</tr>
