Fixed some issues, deleted unnecessary code

--- a/src/main/resources/templates/data.html
+++ b/src/main/resources/templates/data.html
@@ -77,9 +77,8 @@
      </table>
      </div>
  </div>
-  <a class="btn btn-primary glyphicon glyphicon-cog " href="/passMenu">Change password</a>
   	<a class="btn btn-primary glyphicon glyphicon-cog " href="/incident/add">Add incidence</a>
-	<a class="btn btn-primary glyphicon glyphicon-cog " th:href="@{'/incident/list/' + ${name}}">Submitted incidents</a>
+	<a class="btn btn-primary glyphicon glyphicon-cog " href="/incident/list">Submitted incidents</a>
   </div>
 
 
