--- a/src/main/resources/templates/incident/list.html
+++ b/src/main/resources/templates/incident/list.html
@@ -25,7 +25,7 @@
 						<td th:text="${incid.description}"></td>
 						<td th:text="${incid.state}"></td>
 						
-						<td><a th:href="@{'/incident/details/' + ${incid.name}}">detalles</a></td>
+						<td><a th:href="@{'/incident/details/' + ${incid.id}}">detalles</a></td>
 						
 					</tr>
 				</tbody>
