Now we can use the common JSON format

--- a/src/main/resources/templates/incident/add.html
+++ b/src/main/resources/templates/incident/add.html
@@ -42,6 +42,7 @@
 							required="true" />
 					</div>
 				</div>
+				<p>	(compulsory format:tag1,tag2,tag3,etc)</p>
 				<div class="form-group">
 				<label class="control-label col-sm-2" for="tags">Tags:</label> 
 					<div class="col-sm-10">
@@ -49,6 +50,7 @@
 							required="true" />
 					</div>
 				</div>
+				<p>(must be a double)</p>
 				<div class="form-group">
 				<label class="control-label col-sm-2" for="lat">Lattitude:</label> 
 					<div class="col-sm-10">
@@ -56,6 +58,7 @@
 							required="true" />
 					</div>
 				</div>
+				<p>(must be a double)</p>
 				<div class="form-group">
 				<label class="control-label col-sm-2" for="lon">Longitude:</label> 
 					<div class="col-sm-10">
@@ -70,6 +73,7 @@
 							<input type="file" class="custom-file-input" name="multimedia" />
 						</div>
 				</div> -->
+				<p> (compulsory format:m1,m2,m3,etc)</p>
 				<div class="form-group">
 				<label class="control-label col-sm-2" for="multimedia">Multimedia:</label> 
 					<div class="col-sm-10">
@@ -78,6 +82,7 @@
 					</div>
 				</div>
 				<div class="form-group">
+				<p>(compulsory format->prop1:value,prop2:value)</p>
 				<label class="control-label col-sm-2" for="properties">Properties:</label> 
 					<div class="col-sm-10">
 						<input type="text" class="form-control" name="properties"
