--- a/src/main/resources/templates/incident/add.html
+++ b/src/main/resources/templates/incident/add.html
@@ -47,7 +47,7 @@
 				<label class="control-label col-sm-2" for="tags">Tags:</label> 
 					<div class="col-sm-10">
 						<input type="text" class="form-control" name="tags"
-							required="true" />
+							 />
 					</div>
 				</div>
 				<p>(must be a double)</p>
@@ -78,11 +78,11 @@
 				<label class="control-label col-sm-2" for="multimedia">Multimedia:</label> 
 					<div class="col-sm-10">
 						<input type="text" class="form-control" name="multimedia"
-							required="true" />
+							/>
 					</div>
 				</div>
 				<div class="form-group">
-				<p>(compulsory format->prop1:value,prop2:value)</p>
+				<p>(compulsory format->type:value,prop1:value)</p>
 				<label class="control-label col-sm-2" for="properties">Properties:</label> 
 					<div class="col-sm-10">
 						<input type="text" class="form-control" name="properties"
