--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,6 +14,9 @@
                     </div>
                 <input id="login" name="login" type="text" th:field="*{login}" class="form-control" placeholder="Name" />
                 <input id="password" name="password" type="password" th:field="*{password}" class="form-control" placeholder="Password" />
+                <select id="kind" name="kind" th:field="*{kind}" class="form-control" >
+        				<option th:each="prod : ${userinfo.kindCodes}" th:text="${prod}" th:value="${prod}"></option>
+      			</select>
                 <button id="Enter" name="Enter" type="submit" value="enter" class="btn btn-block btn-primary btn-lg">Enter </button>
         </form>
 
