--- a/src/main/resources/templates/incident/add.html
+++ b/src/main/resources/templates/incident/add.html
@@ -83,10 +83,10 @@
 				<div class="form-group">
 				<label class="control-label col-sm-2" for="type">Tipo del incidente:</label> 
 				<select name="type" class="form-control" >
-        				<option value="Bombero">Bombero</option>
-        				<option value="Policia">Policia</option>
-        				<option value="Rescate">Rescate</option>
-        				<option value="Medicina">Medicina</option>
+        				<option value="FIREMAN">Fireman</option>
+        				<option value="POLICE">Police</option>
+        				<option value="RESCUE">Rescue</option>
+        				<option value="MEDIC">Medic</option>
       			</select>
       			</div>
 				<div class="form-group">
