Added Gatling test

--- a/src/main/resources/templates/incident/details.html
+++ b/src/main/resources/templates/incident/details.html
@@ -18,7 +18,7 @@
 						<td th:text="${incident.description}"></td>
 					</tr>
 					<tr>
-						<td>Agent Name</td>
+						<td>Agent ID</td>
 						<td th:text="${incident.agentId}"></td>		
 					</tr>
 					<tr>
