Fixed error with new Thymeleaf and deleted InsertDataService

--- a/src/main/resources/templates/incident/details.html
+++ b/src/main/resources/templates/incident/details.html
@@ -11,35 +11,35 @@
 				<tbody>
 					<tr>
 						<td>Name</td>
-						<td th:text="${incident.name}"></td>
+						<td th:text="${name}"></td>
 					</tr>
 					<tr>
 						<td>Description</td>
-						<td th:text="${incident.description}"></td>
+						<td th:text="${description}"></td>
 					</tr>
 					<tr>
 						<td>Agent ID</td>
-						<td th:text="${incident.agentId}"></td>		
+						<td th:text="${agentId}"></td>		
 					</tr>
 					<tr>
 						<td>Location</td>
-						<td th:text="${incident.location}"></td>		
+						<td th:text="${location}"></td>		
 					</tr>
 					<tr>
 						<td>Tags</td>
-						<td th:text="${incident.tags}"></td>		
+						<td th:text="${tags}"></td>		
 					</tr>
 					<tr>
 						<td>Properties</td>
-						<td th:text="${incident.properties}"></td>		
+						<td th:text="${properties}"></td>		
 					</tr>
 					<tr>
 						<td>Multimedia</td>
-						<td th:text="${incident.multimedia}"></td>		
+						<td th:text="${multimedia}"></td>		
 					</tr>
 					<tr>
 						<td>State</td>
-						<td th:text="${incident.state}"></td>		
+						<td th:text="${state}"></td>		
 					</tr>
 				</tbody>
 			</table>
