--- a/src/main/resources/templates/incident/add.html
+++ b/src/main/resources/templates/incident/add.html
@@ -56,14 +56,14 @@
 				<label class="control-label col-sm-2" for="lat">Lattitude:</label> 
 					<div class="col-sm-10">
 						<input type="number" step=".01" class="form-control" name="lat"
-							required="true" />
+							required="true" min="-90.0" max="90.0"/>
 					</div>
 				</div>
 				<div class="form-group">
 				<label class="control-label col-sm-2" for="lon">Longitude:</label> 
 					<div class="col-sm-10">
 						<input type="number" step=".01" class="form-control" name="lon"
-							required="true" />
+							required="true" min="-180.0" max="180.0"/>
 					</div>
 				</div>
 				<!--
